# integral-knowledge-architecture

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-METHODOLOGY  METHODOLOGY.md  README.md
components/classification/: README.md  lint.py
components/classification/examples/: example-frontmatter.md
components/classification/schema/: classification.schema.json
components/extraction/: README.md
components/extraction/schema/: step-descriptors.schema.json
components/instruction/: PERSISTENT_ORIENTATION_TEMPLATE.md  README.md
components/regeneration/: README.md
components/regeneration/examples/: living-podcast-manifest.json
components/regeneration/schema/: manifest.schema.json
components/sdip/: LICENSE  LICENSE-SPEC  README.md  SPEC.md  pyproject.toml
components/sdip/bundles/example-tradition/: backbone.md  calibrations.yaml  glossary.yaml  manifest.json
components/sdip/bundles/example-tradition/conformance/: test-suite.yaml
components/sdip/bundles/example-tradition/corpus/: example-article.md
components/sdip/bundles/harmonism/: backbone.md  calibrations.yaml  glossary.yaml  manifest.json
components/sdip/bundles/harmonism/conformance/: test-suite.yaml
components/sdip/bundles/harmonism/corpus/: README.md
components/sdip/schemas/: calibrations.schema.json  conformance.schema.json  manifest.schema.json
components/sdip/scripts/: populate-corpus-from-sovereignty-bundle.sh  validate-bundle.py
components/sdip/sdip/: __init__.py  bundle.py  calibration.py  cli.py  conformance.py  harness.py  manifest.py  memory.py  model.py  retrieval.py
components/sdip/tests/: test_manifest.py
components/sensors/: README.md
components/sensors/examples/: companion-knowledge-drift.yaml  translation-staleness.yaml  website-health.yaml  weekly-vault-state-report.yaml
components/sensors/schema/: sensor.schema.json
components/topology/: README.md
components/topology/examples/: harmonism-wheel.yaml
components/topology/schema/: topology.schema.json
components/translation/: PIPELINE.md  README.md  pyproject.toml
components/translation/examples/: example-translation-frontmatter.md
components/translation/schema/: glossary.schema.json  translation-manifest.schema.json
components/translation/tests/: test_glossary.py  test_hasher.py  test_validators.py
components/translation/translate/: __init__.py  cli.py  glossary.py  hasher.py  manifest.py  validators.py
components/translation/translate/providers/: __init__.py  base.py  claude.py  deepl.py  groq.py
patterns/i-fractal-topology/: README.md
patterns/ii-centre-spoke/: README.md
patterns/iii-epistemic-metadata/: README.md
patterns/iv-content-priority/: README.md
patterns/ix-instruction-architecture/: README.md
patterns/v-companion/: README.md
patterns/vi-context-engineering/: README.md
patterns/vii-translation/: README.md
patterns/viii-qa-sensors/: README.md
patterns/x-cross-domain-integration/: README.md
patterns/xii-canonical-regeneration/: README.md
patterns/xiii-content-integration/: README.md
